Introduced login & signup screens. Moved booking forms (trip & accommodation) to separate files. Updated nav.

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../static/css/items.css"></link>
     <link rel="stylesheet" href="../static/css/date-picker.css"></link>
 
-    <link rel="stylesheet" href="../static/open-iconic-master/font/css/open-iconic-bootstrap.min.css"></link>
+    <!-- <link rel="stylesheet" href="../static/open-iconic-master/font/css/open-iconic-bootstrap.min.css"></link> -->
     <link rel="stylesheet" href="../node_modules/react-bootstrap-table/dist/react-bootstrap-table-all.min.css"></link>
   </head>
   <style>
@@ -50,5 +50,6 @@
         );
       }
     </script>
+    <!-- <script src="https://unpkg.com/ionicons@4.1.2/dist/ionicons.js"></script> -->
   </body>
 </html>
